--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "jsonwebtoken": "^8.5.0",
+    "jwt-decode": "^3.1.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
